--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = """
 Types for SolHOP
 """
 documentation = "https://docs.rs/solhop-types/"
-homepage = "https://solhop.org/"
+homepage = "https://solhop.netlify.app/"
 repository = "https://github.com/solhop/solhop-types"
 readme = "README.md"
 keywords = ["SAT", "MaxSAT", "Boolean", "Satisfiability", "SolHOP"]
